--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "author": "Phillip Johnsen <johphi@gmail.com>",
   "license": "MIT",
+  "repository": "git://github.com/phillipj/changelog-url",
   "engines": {
     "node": ">= 4.0.0"
   },
